# BandageNG

./: .gitignore  .gitmodules  Bandage.pro  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  snapshots.yml  test.yml
blast/: blasthit.cpp  blasthit.h  blastqueries.cpp  blastqueries.h  blastquery.cpp  blastquery.h  blastquerypath.cpp  blastquerypath.h  blastsearch.cpp  blastsearch.h  buildblastdatabaseworker.cpp  buildblastdatabaseworker.h  hit.cpp  queries.cpp  query.cpp  query.h  querypath.h  runblastsearchworker.cpp  runblastsearchworker.h
command_line/: commoncommandlinefunctions.cpp  commoncommandlinefunctions.h  image.cpp  image.h  info.cpp  info.h  layout.cpp  layout.h  load.cpp  load.h  querypaths.cpp  querypaths.h  reduce.cpp  reduce.h  settings.cpp  settings.h
graph/: annotation.cpp  annotation.h  annotation.hpp  annotationsmanager.cpp  annotationsmanager.h  annotationsmanager.hpp  assemblygraph.cpp  assemblygraph.h  assemblygraphbuilder.cpp  assemblygraphbuilder.h  assemblygraphfast.cpp  bedloader.cpp  bedloader.hpp  contiguity.h  debruijnedge.cpp  debruijnedge.h  debruijnnode.cpp  debruijnnode.h  fastawriter.cpp  fastawriter.h  fileutils.cpp  fileutils.h  gfa.cpp  gfa.h  gfa.hpp  gfawrapper.hpp  gfawriter.cpp  gfawriter.h  graphicsitemedge.cpp  graphicsitemedge.h  graphicsitemlink.cpp  graphicsitemlink.h  graphicsitemnode.cpp  graphicsitemnode.h  graphlocation.cpp  graphlocation.h  graphscope.cpp  graphscope.h  io.cpp  io.h  (+9 more)
graphsearch/: graphsearch.cpp  graphsearch.h  graphsearchers.cpp  hit.cpp  hit.h  hits.h  queries.cpp  queries.h  query.cpp  query.h  querypath.cpp  querypath.h
graphsearch/blast/: blastsearch.cpp  blastsearch.h  buildblastdatabaseworker.cpp  runblastsearchworker.cpp  runblastsearchworker.h
graphsearch/hmmer/: hmmersearch.cpp  hmmersearch.h
graphsearch/minimap2/: minimap2search.cpp  minimap2search.h
io/: bed.h  bedloader.cpp  bedloader.h  cigar.cpp  cigar.h  cigar.inl  fileutils.cpp  fileutils.h  gaf.cpp  gaf.h  gfa.cpp  gfa.h
layout/: graphlayout.cpp  graphlayout.h  graphlayoutworker.cpp  graphlayoutworker.h  io.cpp  io.h
ogdf/basic/: Constraint.cpp  Graph_d.h  List.h  SList.h  memory.h
ogdf/cluster/: ClusterArray.h  ClusterGraph.h  ClusterGraphAttributes.h  ClusterGraphObserver.h
ogdf/energybased/: Edge.h  FMMMLayout.cpp  Multilevel.cpp  Rectangle.h  Set.h
ogdf/fileformats/: DinoLineBuffer.cpp  DinoLineBuffer.h  DinoTools.h  Ogml.h  OgmlParser.h
ogdf/internal/basic/: PoolMemoryAllocator.cpp  PoolMemoryAllocator.h  list_templates.h
ogdf/internal/energybased/: EdgeAttributes.h  FruchtermanReingold.h  MultilevelGraph.cpp  NMM.cpp  NMM.h  NodeAttributes.h  QuadTreeNodeNM.h
ogdf/module/: LayoutModule.h
program/: colormap.cpp  colormap.h  globals.cpp  globals.h  graphlayout.h  graphlayoutworker.cpp  graphlayoutworker.h  main.cpp  memory.cpp  memory.h  scinot.cpp  scinot.h  settings.cpp  settings.h
resources/: BandageNG.desktop  CMakeLists.txt
tests/: CMakeLists.txt  bandage_command_line_tests.sh  bandagetests.cpp  test_not_defined.gfa
tests/inputs/: test.csv  test.gfa  test.layout  test.links.tsv  test.paths  test_gfa12.gfa  test_paths.csv  test_rgfa.gfa
ui/: aboutdialog.cpp  aboutdialog.ui  annotationswidget.cpp  annotationswidget.h  bandagegraphicsscene.cpp  bandagegraphicsscene.h  bandagegraphicsview.cpp  bandagegraphicsview.h  bedwidget.cpp  bedwidget.h  blasthitfiltersdialog.cpp  blastsearchdialog.cpp  blastsearchdialog.h  changenodedepthdialog.cpp  changenodedepthdialog.h  changenodenamedialog.cpp  changenodenamedialog.h  collapsebutton.h  enteroneblastquerydialog.cpp  enteroneblastquerydialog.h  graphicsviewzoom.cpp  graphicsviewzoom.h  graphinfodialog.cpp  graphinfodialog.h  infotextwidget.cpp  infotextwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h  mygraphicsview.cpp  mygraphicsview.h  myprogressdialog.cpp  mytablewidget.h  nodewidthvisualaid.cpp  nodewidthvisualaid.h  pathspecifydialog.cpp  pathspecifydialog.h  querypathsdialog.cpp  (+16 more)
ui/dialogs/: aboutdialog.cpp  aboutdialog.h  blasthitfiltersdialog.cpp  blasthitfiltersdialog.h  blasthitfiltersdialog.ui  blastsearchdialog.cpp  blastsearchdialog.h  blastsearchdialog.ui  enteronequerydialog.cpp  enteronequerydialog.h  enteronequerydialog.ui  graphinfodialog.cpp  graphinfodialog.h  graphinfodialog.ui  graphsearchdialog.cpp  graphsearchdialog.h  graphsearchdialog.ui  hitfiltersdialog.cpp  hitfiltersdialog.h  hitfiltersdialog.ui  myprogressdialog.cpp  myprogressdialog.h  myprogressdialog.ui  pathlistdialog.cpp  pathlistdialog.h  pathlistdialog.ui  pathspecifydialog.cpp  pathspecifydialog.h  pathspecifydialog.ui  querypathsdialog.cpp  querypathsdialog.h  querypathsdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  walklistdialog.cpp  walklistdialog.h  walklistdialog.ui
ui/widgets/: infotextwidget.h  verticallabel.h
